# gossipgriddb

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  functions.json  simple_api_test.sh  start_local_cluster_3n.sh  start_local_cluster_3n_named.sh  start_local_cluster_5n.sh
.github/: copilot-instructions.md
.github/workflows/: rust.yml
docs/: compute.md  gossip.md  gossip_membership.md  sync.md
examples/demo/: Cargo.toml
examples/demo/src/: cli.rs  lib.rs  main.rs
gossipgrid/: Cargo.toml
gossipgrid-client/: Cargo.toml  README.md
gossipgrid-client/benches/: api_latency_bench.rs  batch_latency_bench.rs  client_bench.rs  latency_bench.rs
gossipgrid-client/benches/common/: mod.rs
gossipgrid-client/src/: error.rs  lib.rs  routing.rs  topology.rs  types.rs
gossipgrid-wal/: Cargo.toml  README.md
gossipgrid-wal/benches/: wal_micro.rs  wal_throughput.rs
gossipgrid-wal/src/: lib.rs
gossipgrid/src/: clock.rs  compute.rs  env.rs  event_bus.rs  fs.rs  function_registry.rs  gossip.rs  item.rs  lib.rs  prelude.rs  store.rs  sync.rs  util.rs  wal.rs  web.rs
gossipgrid/src/cluster/: mod.rs  state.rs  strategy.rs  tests.rs  types.rs
gossipgrid/src/node/: address.rs  builder.rs  mod.rs  state.rs  types.rs
gossipgrid/src/storage/: mod.rs  wal.rs
gossipgrid/src/store/: btree_store.rs  memory_store.rs  mod.rs
gossipgrid/src/store/sstable_store/: compactor.rs  key_codecs.rs  merge_iterator.rs  mod.rs  partition_store.rs  string_utils.rs  tests.rs
gossipgrid/src/web/: cluster.rs  functions.rs  items.rs  mod.rs  server.rs  topology.rs
gossipgrid/tests/: helpers.rs  int_tests_batch_write.rs  int_tests_compute.rs  int_tests_gossip.rs  int_tests_partition_locks.rs  int_tests_publish.rs  int_tests_sstable_recovery.rs  int_tests_sync_wait.rs
gossipgrid/tests/helpers/: mod.rs
openspec/: config.yaml
openspec/changes/add-batch-write/: design.md  tasks.md
openspec/changes/add-batch-write/specs/batch-write/: spec.md
openspec/changes/archive/2026-02-12-segmented-wal-log-rotation/: design.md  tasks.md
openspec/changes/archive/2026-02-15-segmented-wal-log-rotation/: proposal.md  tasks.md
openspec/changes/archive/2026-03-01-smart-client-crate/smart-client-crate/: design.md  proposal.md  specs.md  tasks.md
openspec/changes/archive/2026-03-01-smart-client-crate/smart-client-crate/specs/topology-discovery/: spec.md
openspec/changes/archive/2026-03-01-smart-client-crate/smart-client-crate/specs/topology-heartbeat/: spec.md
openspec/changes/archive/2026-03-05-add-batch-write/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-05-add-batch-write/specs/batch-write/: spec.md
openspec/changes/archive/2026-03-15-sstable-storage/: .tasks.md.swp  design.md  proposal.md
openspec/changes/archive/2026-03-15-sstable-storage/specs/sstable-storage/: spec.md
openspec/changes/cluster-resizing/: design.md  proposal.md
openspec/changes/cluster-resizing/specs/client-routing/: spec.md
openspec/changes/cluster-resizing/specs/cluster-resizing/: spec.md
openspec/changes/cluster-resizing/specs/topology-discovery/: spec.md
openspec/changes/segmented-wal-log-rotation/: design.md  specs.md  tasks.md
openspec/changes/smart-client-crate/: tasks.md
openspec/changes/solve-split-brain-during-resize/: design.md  proposal.md  tasks.md
openspec/changes/solve-split-brain-during-resize/specs/cluster-resizing/: spec.md
openspec/changes/solve-split-brain-during-resize/specs/partition-locking/: spec.md
openspec/changes/solve-split-brain-during-resize/specs/write-availability/: spec.md
openspec/changes/sstable-storage/: design.md  tasks.md
openspec/changes/sstable-storage/specs/sstable-storage/: spec.md
openspec/specs/batch-write/: spec.md
openspec/specs/client-routing/: spec.md
openspec/specs/error-handling/: spec.md
openspec/specs/sstable-storage/: spec.md
openspec/specs/topology-endpoint/: spec.md
perf/: k6.js  k6_mixed.js  k6_reads.js  package.json  write_items.sh  write_items_range.sh
