[package]
name = "gossipgrid-client"
version = "0.1.0"
edition = "2024"
description = "A topology-aware Rust client for GossipGridDB"
license = "MIT OR Apache-2.0"
keywords = ["gossipgrid", "client", "distributed", "database"]

[lib]
doc = true

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.48.0", features = ["sync", "time", "rt", "macros"] }
twox-hash = { version = "2.1.*" }
serde = { version = "1.0.*", features = ["derive"] }
serde_json = { version = "1.0.*" }
thiserror = { version = "2.0.*" }
log = { version = "0.4.*" }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
base64 = "0.22"

[[bench]]
name = "client_bench"
harness = false

[[bench]]
name = "latency_bench"
harness = false

[[bench]]
name = "api_latency_bench"
harness = false
