[package]
name = "gossipgrid-wal"
version = "0.1.0"
edition = "2024"
description = "Write-Ahead Log (WAL) implementation for GossipGrid"
license = "MIT OR Apache-2.0"
keywords = ["distributed", "database", "wal", "storage", "rust"]
repository = "https://github.com/markosski/gossipgrid"
authors = ["Marcin <markosski@users.noreply.github.com>"] # Taking from repo path or typical usernames

[dependencies]
tokio = { version = "1.48.0", features = ["fs", "io-util", "sync", "time", "macros", "rt"] }
log = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
thiserror = "2.0"
async-trait = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["fs"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
tempfile = "3"
bincode = { version = "2.0.0-rc.3", features = ["serde"] }

[[bench]]
name = "wal_micro"
harness = false

[[bench]]
name = "wal_throughput"
harness = false
